--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\cheta\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
+    "python.pythonPath": "C:\\Users\\cheta\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe",
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true
 }
